# cc65-paintHD

./: .gitignore  CMakeLists.txt  README.md
assets/: fonticons.txt  genicons32x32.py  icons32x32.py  paintHDloader.txt  painthd.txt  stripbmpheader.py
docs/: paintHD.txt  paintHDeditor.txt
src/: bmp.c  bmp.h  font5x7.h  icons.h  paintHD.c  paintHD.h  paintHDeditor.c  paintHDeditor.h  paintHDloader.c  paintHDloader.h  paintHDzoom.c  paintHDzoom.h
tools/: make_font_icons_bin.py
